--- a/assianment-2.ipynb
+++ b/assianment-2.ipynb
@@ -33,7 +33,7 @@
       "metadata": {
         "id": "y4FsKgA8OnaZ"
       },
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -47,13 +47,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cHyd4-rhN5zI",
-        "outputId": "2b6147ad-6828-473e-a7b1-19e627bfce24"
+        "outputId": "0365b18b-4db0-404e-f0d3-8d2d8fdce740"
       },
       "outputs": [
         {
@@ -92,7 +92,7 @@
       "source": [
         "print(d)\n",
         "print(\"---------------------------\")\n",
-        "df['Bonus'] = df['Salary'] * 0.10\n",
+        "d['Bonus'] = d['Salary'] * 0.10\n",
         "print(d)"
       ],
       "metadata": {
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c3FfwKdqPxU5",
-        "outputId": "fa0a9d44-a965-4f85-c6af-c21051cb09cf"
+        "outputId": "8a50492a-ab52-459a-c17f-b935fd53906f"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,10 +113,10 @@
             "1    Bob   27   55000\n",
             "2  Carol   22   48000\n",
             "---------------------------\n",
-            "    Name  Age  Salary\n",
-            "0  Alice   24   50000\n",
-            "1    Bob   27   55000\n",
-            "2  Carol   22   48000\n"
+            "    Name  Age  Salary   Bonus\n",
+            "0  Alice   24   50000  5000.0\n",
+            "1    Bob   27   55000  5500.0\n",
+            "2  Carol   22   48000  4800.0\n"
           ]
         }
       ]
@@ -149,27 +149,27 @@
       ],
       "metadata": {
         "id": "Sxcsoa9BwcHl",
-        "outputId": "ea77cc9a-64e5-4fef-d9cb-d0756e9ed20d",
+        "outputId": "fb36ca04-1e4c-4d08-fcb8-d8892b95bf97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "the dataframe is \n",
-            "     Name  Age  Salary\n",
-            "0  Alice   24   50000\n",
-            "1    Bob   27   55000\n",
-            "2  Carol   22   48000\n",
+            "     Name  Age  Salary   Bonus\n",
+            "0  Alice   24   50000  5000.0\n",
+            "1    Bob   27   55000  5500.0\n",
+            "2  Carol   22   48000  4800.0\n",
             "the first two rows of the above data frame is \n",
             "\n",
-            "    Name  Age  Salary\n",
-            "0  Alice   24   50000\n",
-            "1    Bob   27   55000\n"
+            "    Name  Age  Salary   Bonus\n",
+            "0  Alice   24   50000  5000.0\n",
+            "1    Bob   27   55000  5500.0\n"
           ]
         }
       ]
@@ -192,22 +192,22 @@
       ],
       "metadata": {
         "id": "WezzCAYrwGTd",
-        "outputId": "a24ec7d6-0731-4c2a-c9b5-3858243efc12",
+        "outputId": "61340a3c-4c6d-450c-b65a-60b1a96d045c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "the dataframe is \n",
-            "     Name  Age  Salary\n",
-            "0  Alice   24   50000\n",
-            "1    Bob   27   55000\n",
-            "2  Carol   22   48000\n",
+            "     Name  Age  Salary   Bonus\n",
+            "0  Alice   24   50000  5000.0\n",
+            "1    Bob   27   55000  5500.0\n",
+            "2  Carol   22   48000  4800.0\n",
             "mean of the salary is :  51000.0\n"
           ]
         }
@@ -240,25 +240,25 @@
       ],
       "metadata": {
         "id": "G5qkkqEEzSJZ",
-        "outputId": "46692da3-ec39-40e1-bb41-dd2fe1f923c0",
+        "outputId": "63db6946-2109-4a78-fbe7-b14ea23d82c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "the dataframe is \n",
-            "     Name  Age  Salary\n",
-            "0  Alice   24   50000\n",
-            "1    Bob   27   55000\n",
-            "2  Carol   22   48000\n",
+            "     Name  Age  Salary   Bonus\n",
+            "0  Alice   24   50000  5000.0\n",
+            "1    Bob   27   55000  5500.0\n",
+            "2  Carol   22   48000  4800.0\n",
             "age is greatther than 25 is \n",
-            "   Name  Age  Salary\n",
-            "1  Bob   27   55000\n"
+            "   Name  Age  Salary   Bonus\n",
+            "1  Bob   27   55000  5500.0\n"
           ]
         }
       ]
@@ -281,25 +281,25 @@
       ],
       "metadata": {
         "id": "8Pii2olCzSr5",
-        "outputId": "5e800d57-d2b6-42bc-9c6c-1055f5784a1f",
+        "outputId": "45288a96-ad60-41e5-e9de-178124b84324",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "the dataframe is \n",
-            "     Name  Age  Salary\n",
-            "0  Alice   24   50000\n",
-            "1    Bob   27   55000\n",
-            "2  Carol   22   48000\n",
+            "     Name  Age  Salary   Bonus\n",
+            "0  Alice   24   50000  5000.0\n",
+            "1    Bob   27   55000  5500.0\n",
+            "2  Carol   22   48000  4800.0\n",
             "salary is lesser than 50000 is \n",
-            "     Name  Age  Salary\n",
-            "2  Carol   22   48000\n"
+            "     Name  Age  Salary   Bonus\n",
+            "2  Carol   22   48000  4800.0\n"
           ]
         }
       ]
@@ -327,12 +327,12 @@
       ],
       "metadata": {
         "id": "XsLas4hH1VWg",
-        "outputId": "27cb8731-0b1a-4fcb-c47a-36b1141596f4",
+        "outputId": "62fa3c96-e7c8-445a-b54f-0ac4e0e799dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +367,12 @@
       ],
       "metadata": {
         "id": "NZiRt8huW4bX",
-        "outputId": "985c7861-6d74-45b5-bce7-49aa3e7266e3",
+        "outputId": "eaa24088-27dc-4a0e-e54e-07f98250898d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,12 +412,12 @@
       ],
       "metadata": {
         "id": "d_Kj4LP5aXSF",
-        "outputId": "862cefe5-dad5-4217-c14c-5ac223be6870",
+        "outputId": "e24de964-1649-4b27-a256-605cff6cd712",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,12 +463,12 @@
       ],
       "metadata": {
         "id": "Jk-Ic2i_cd56",
-        "outputId": "b37922e8-34f9-4096-8c03-d32b687f263f",
+        "outputId": "34d76209-eb1a-494a-890a-8fd401f3aeb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,12 +503,12 @@
       ],
       "metadata": {
         "id": "AUh95IVNddbz",
-        "outputId": "a3208d88-54cd-4367-c555-e15817445385",
+        "outputId": "81758e54-98b6-4ecc-f7d0-c7ec56b9887a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,12 +545,12 @@
       ],
       "metadata": {
         "id": "1TINq5HbfMy2",
-        "outputId": "7b9fc9d8-db08-4dec-814a-4cceec5f1d52",
+        "outputId": "91d5e3e5-dfb9-4242-ae97-f4412e79247a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,8 +587,6 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "\n",
-        "# Create the DataFrame\n",
         "data9 = {\n",
         "    'Name': ['Alice', 'Bob', 'Carol'],\n",
         "    'Age': [25, 30, None],\n",
@@ -599,33 +597,27 @@
         "\n",
         "print(\"Original DataFrame:\")\n",
         "print(df9)\n",
-        "\n",
-        "# Fill missing values in 'Age' with the mean of the column\n",
         "df9['Age'] = df9['Age'].fillna(df9['Age'].mean())\n",
         "\n",
-        "# Remove duplicate rows\n",
         "df9 = df9.drop_duplicates()\n",
         "\n",
         "print(\"\\nDataFrame after cleaning:\")\n",
         "print(df9)\n",
-        "\n",
-        "# Display basic statistics\n",
         "print(\"\\nBasic Statistics:\")\n",
         "print(df9.describe())\n",
         "\n",
-        "# Display information about the DataFrame\n",
         "print(\"\\nDataFrame Info:\")\n",
         "df9.info()\n",
         "\n"
       ],
       "metadata": {
         "id": "ULFQ4iVthXvg",
-        "outputId": "1ba69299-9046-4c4d-930b-f78ebbf59f72",
+        "outputId": "f92aa6d3-61b8-401b-ce1a-8e308a08c7e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,12 +682,68 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "p1=k.read_csv('/content/Titanic-Dataset (1).csv')\n",
+        "p2=k.DataFrame(p1)\n",
+        "print(\"the titanic dataframe is \\n\",p2)"
+      ],
       "metadata": {
-        "id": "xlqU8V7T0vr4"
+        "id": "xlqU8V7T0vr4",
+        "outputId": "3f4c1597-b152-4ba1-bfe1-8d8f5bd1d0a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the titanic dataframe is \n",
+            "      PassengerId  Survived  Pclass  \\\n",
+            "0              1         0       3   \n",
+            "1              2         1       1   \n",
+            "2              3         1       3   \n",
+            "3              4         1       1   \n",
+            "4              5         0       3   \n",
+            "..           ...       ...     ...   \n",
+            "886          887         0       2   \n",
+            "887          888         1       1   \n",
+            "888          889         0       3   \n",
+            "889          890         1       1   \n",
+            "890          891         0       3   \n",
+            "\n",
+            "                                                  Name     Sex   Age  SibSp  \\\n",
+            "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
+            "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+            "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
+            "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+            "4                             Allen, Mr. William Henry    male  35.0      0   \n",
+            "..                                                 ...     ...   ...    ...   \n",
+            "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
+            "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+            "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
+            "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
+            "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
+            "\n",
+            "     Parch            Ticket     Fare Cabin Embarked  \n",
+            "0        0         A/5 21171   7.2500   NaN        S  \n",
+            "1        0          PC 17599  71.2833   C85        C  \n",
+            "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
+            "3        0            113803  53.1000  C123        S  \n",
+            "4        0            373450   8.0500   NaN        S  \n",
+            "..     ...               ...      ...   ...      ...  \n",
+            "886      0            211536  13.0000   NaN        S  \n",
+            "887      0            112053  30.0000   B42        S  \n",
+            "888      2        W./C. 6607  23.4500   NaN        S  \n",
+            "889      0            111369  30.0000  C148        C  \n",
+            "890      0            370376   7.7500   NaN        Q  \n",
+            "\n",
+            "[891 rows x 12 columns]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -781,12 +829,12 @@
       ],
       "metadata": {
         "id": "npgohiEinPs5",
-        "outputId": "a6103b8f-160a-4d4e-853c-70c75637bab4",
+        "outputId": "247a9174-a98f-48d1-817c-e6b3016260f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -821,24 +869,24 @@
       ],
       "metadata": {
         "id": "rwjrmNodvSNt",
-        "outputId": "6fd3ea80-b237-4a35-dcea-d589027077a1",
+        "outputId": "4ce5c263-7083-4a53-a0c6-fa455b005ada",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "the dataframe is\n",
-            "          Date  Temperature\n",
-            "0 2024-12-01           30\n",
-            "1 2024-12-02           25\n",
-            "2 2024-12-03           18\n",
-            "3 2024-12-04           35\n",
-            "4 2024-12-05           22\n",
+            "           Date  Temperature\n",
+            "0  2024-12-01           30\n",
+            "1  2024-12-02           25\n",
+            "2  2024-12-03           18\n",
+            "3  2024-12-04           35\n",
+            "4  2024-12-05           22\n",
             "after convert date colum into datatime object\n",
             "\n",
             "        Date  Temperature\n",
@@ -877,12 +925,12 @@
       ],
       "metadata": {
         "id": "6JRvKkMRwQn1",
-        "outputId": "77142fbb-fce9-43ef-dccc-ed19be94f806",
+        "outputId": "56c3ce9d-1536-430f-d199-c4db78273bed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
